# spikesorter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  my_stylesheet.qss  spikesorter.qrc  vcpkg.json
spikesorter/: main.cpp
spikesorter/AnalogRenderArea/: AnalogRenderXAxisProps.cpp  AnalogRenderXAxisProps.hpp  AnalogRenderYAxisProps.cpp  AnalogRenderYAxisProps.hpp  analogrenderarea.cpp  analogrenderarea.hpp
spikesorter/core/: analog.hpp
spikesorter/mainwindow/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
